Eclipse1/SalesforceCI/ Enterprise/objects/Training_Enrollment__c.object
<CustomObject>
    <description>Train Your Salesteam - Enrollment in a training course.</description>
    <fields>
        <fullName>Certificate_Number__c</fullName>
        <description>The certificate number should a user pass the course.</description>
        <label>Certificate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComboID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Combination course ID and user ID xxx_xxx</description>
        <externalId>true</externalId>
        <label>ComboID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Course_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this course been completed?</description>
        <label>Course Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Taken__c</fullName>
        <description>The date you last took the course.</description>
        <label>Date Taken</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Enrollment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Score you achieved in the course.</description>
        <label>Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set if this enrollment was made using the TYS Training Catalog.</description>
        <label>Self Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The course the enrollment is for.</description>
        <label>Training Course</label>
        <referenceTo>TYS_TrainingCourse__c</referenceTo>
        <relationshipLabel>Training Enrollments</relationshipLabel>
        <relationshipName>Training_Enrollments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that is enrolled in a training course.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ENRL-{000000}</displayFormat>
        <label>Enrollment Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>